[package]
name        = "mg-onchain-server"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
description = "Binary entry point: background task orchestration for onchain-service"

[features]
default = []
# test-containers: enables Docker testcontainers Postgres for onchain-validate --docker mode.
# Requires Docker daemon accessible. Gated so the binary is runnable in environments without Docker.
# Also enables test-utils mock stores in mg-onchain-graph + mg-onchain-storage so that
# D08/D11/D12/D13 can be instantiated with empty mock stores in the Docker validate harness.
# Compile with: `cargo build --features test-containers --bin onchain-validate`
test-containers = [
    "dep:testcontainers",
    "dep:testcontainers-modules",
    "mg-onchain-graph/test-utils",
    "mg-onchain-storage/test-utils",
    "mg-onchain-token-registry/test-utils",
    "mg-onchain-detectors/test-utils",
]

[[bin]]
name = "onchain-service"
path = "src/main.rs"
# No required-features: WS-mode binary works with default features.

[[bin]]
name = "onchain-cli"
path = "src/bin/onchain_cli.rs"
# No required-features: CLI only needs reqwest + clap.

[[bin]]
name = "onchain-validate"
path = "src/bin/onchain_validate.rs"
# No required-features: harness uses in-process config loading only.

[[bin]]
name = "onchain-calibrate"
path = "src/bin/onchain_calibrate.rs"
# No required-features: calibration pass is pure in-process (no Postgres).

[[bin]]
name = "onchain-check-token"
path = "src/bin/onchain_check_token.rs"
# Sprint 26 (2026-04-28): minimum-viable CLI that runs OUR D03 detector math
# (`mg_onchain_detectors::signals::{gini_descending, top_n_pct}`) against REAL
# on-chain holder data fetched via standard JSON-RPC. First true end-to-end
# validation that our detector code produces real verdicts on real data.
# No Postgres / docker-compose / testcontainers — pure CLI demo.

[[bin]]
name = "onchain-score-server"
path = "src/bin/onchain_score_server.rs"
# Sprint 27 T27-35: thin axum HTTP wrapper around onchain-check-token.
# GET /v1/score?chain=X&token=Y spawns the CLI as a subprocess, parses
# composite verdict + driving signals, returns JSON. Single binary, no DB.
# Per memory feedback_cli_first_product: "When a consumer asks for an API:
# wrap the CLI in a REST endpoint."

[dependencies]
anyhow.workspace      = true
thiserror.workspace   = true
tokio.workspace       = true
tracing.workspace     = true
tracing-subscriber.workspace = true
# Sprint 26 T26-7 (ADR 0007 §9.5): OTLP exporter wired in `init::tracing_init`.
# Inactive when OTEL_EXPORTER_OTLP_ENDPOINT env / config field is unset — stdout-only fallback.
opentelemetry.workspace         = true
opentelemetry_sdk.workspace     = true
opentelemetry-otlp.workspace    = true
tracing-opentelemetry.workspace = true
serde.workspace       = true
reqwest.workspace     = true
chrono.workspace      = true
futures.workspace     = true
async-channel.workspace = true
async-trait.workspace = true
serde_json.workspace  = true
toml.workspace        = true
clap.workspace        = true
tokio-util.workspace  = true
url.workspace         = true
rust_decimal.workspace = true
prometheus            = "0.13"
# axum: HTTP framework for the onchain-score-server REST wrapper (T27-35).
# Already used transitively via mg-onchain-gateway; declared explicitly so
# the score-server bin can depend on it directly without going through
# the gateway feature surface.
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }
# sqlx needed for PgTokenRiskReportStore in risk_report_store.rs (V00012).
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "migrate",
] }
mg-onchain-common          = { path = "../common" }
mg-onchain-gateway         = { path = "../gateway" }
mg-onchain-indexer         = { path = "../indexer" }
mg-onchain-storage         = { path = "../storage" }
mg-onchain-detectors       = { path = "../detectors" }
mg-onchain-scoring         = { path = "../scoring" }
mg-onchain-token-registry  = { path = "../token-registry" }
mg-onchain-dex-adapter     = { path = "../dex-adapter" }
mg-onchain-graph           = { path = "../graph" }
mg-onchain-chain-adapter   = { path = "../chain-adapter" }

# test-containers: Postgres testcontainer for onchain-validate --docker mode.
# Optional — compile with `--features test-containers`.
testcontainers         = { version = "0.23", optional = true }
testcontainers-modules = { version = "0.11", features = ["postgres"], optional = true }

[dev-dependencies]
tokio         = { workspace = true, features = ["macros", "rt-multi-thread"] }
bs58          = { workspace = true }
sqlx          = { workspace = true, features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
async-trait   = { workspace = true }
base64        = { workspace = true }
mg-solana-types = { path = "../solana-types" }
rust_decimal  = { workspace = true }
testcontainers            = "0.23"
testcontainers-modules    = { version = "0.11", features = ["postgres"] }
wiremock              = "0.6"
mg-onchain-detectors      = { path = "../detectors" }
mg-onchain-storage        = { path = "../storage" }
mg-onchain-token-registry = { path = "../token-registry", features = ["test-utils"] }
mg-onchain-scoring        = { path = "../scoring" }
mg-onchain-common         = { path = "../common" }
mg-onchain-dex-adapter    = { path = "../dex-adapter", features = ["test-utils"] }
