[package]
name        = "mg-solana-types"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
repository.workspace  = true
description = "Solana type primitives — Pubkey/Signature/Hash/Slot/Epoch (replaces solana-sdk vendor crate per ADR 0006)"

[dependencies]
serde          = { workspace = true, features = ["derive"] }
serde_json     = { workspace = true }
thiserror      = { workspace = true }
bs58           = { workspace = true }
ed25519-dalek  = { workspace = true, features = ["rand_core"] }
rand_core      = { version = "0.6", features = ["getrandom"] }
sha2           = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
